--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta
+      name="description"
+      content="A landing page for Jadoo Travel Agency, where you can compare travel options and choose what suits you best."
+    />
+    <meta name="keywords" content="travel, agency, jadoo" />
+    <meta name="author" content="Figma Community" />
     <link
       rel="shortcut icon"
       href="assets/Jadoo_Logo.png"
