--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       content="A landing page for Jadoo Travel Agency, where you can compare travel options and choose what suits you best."
     />
     <meta name="keywords" content="travel, agency, jadoo" />
-    <meta name="author" content="Figma Community" />
+    <meta name="author" content="Ariane Pérez Medina" />
     <link
       rel="shortcut icon"
       href="assets/Jadoo_Logo.png"
